Tests are not working, actually most of it is not working