@@ -19,16 +19,12 @@
  */
 package org.evosuite.localsearch;
 
-import static org.junit.Assert.assertEquals;
-
-import java.lang.reflect.Method;
-import java.util.Arrays;
-
+import com.examples.with.different.packagename.localsearch.DseBar;
+import com.examples.with.different.packagename.localsearch.DseFoo;
 import org.evosuite.Properties;
 import org.evosuite.SystemTestBase;
 import org.evosuite.TestGenerationContext;
 import org.evosuite.coverage.branch.BranchCoverageSuiteFitness;
-import org.evosuite.ga.ConstructionFailedException;
 import org.evosuite.ga.localsearch.DefaultLocalSearchObjective;
 import org.evosuite.ga.localsearch.LocalSearchObjective;
 import org.evosuite.runtime.RuntimeSettings;
@@ -42,12 +38,19 @@ import org.evosuite.testcase.statements.environment.FileNamePrimitiveStatement;
 import org.evosuite.testcase.variable.VariableReference;
 import org.evosuite.testsuite.TestSuiteChromosome;
 import org.evosuite.testsuite.localsearch.TestSuiteLocalSearch;
-import org.evosuite.utils.generic.*;
+import org.evosuite.utils.ReflectionUtils;
+import org.evosuite.utils.generic.GenericClass;
+import org.evosuite.utils.generic.GenericClassFactory;
+import org.evosuite.utils.generic.GenericConstructor;
+import org.evosuite.utils.generic.GenericMethod;
 import org.junit.Before;
 import org.junit.Test;
 
-import com.examples.with.different.packagename.localsearch.DseBar;
-import com.examples.with.different.packagename.localsearch.DseFoo;
+import java.lang.reflect.Method;
+import java.util.Arrays;
+import java.util.List;
+
+import static org.junit.Assert.assertEquals;
 
 public class EnvironmentDataSystemTest extends SystemTestBase {
 
@@ -64,7 +67,7 @@ public class EnvironmentDataSystemTest extends SystemTestBase {
     }
 
     @Test
-    public void testOnSpecificTest() throws ClassNotFoundException, ConstructionFailedException, NoSuchMethodException, SecurityException {
+    public void testOnSpecificTest() throws Exception {
         Properties.TARGET_CLASS = DseBar.class.getCanonicalName();
         Class<?> sut = TestGenerationContext.getInstance().getClassLoaderForSUT().loadClass(Properties.TARGET_CLASS);
         Class<?> fooClass = TestGenerationContext.getInstance().getClassLoaderForSUT().loadClass(DseFoo.class.getCanonicalName());
@@ -77,7 +80,7 @@ public class EnvironmentDataSystemTest extends SystemTestBase {
 
         // DseFoo dseFoo0 = new DseFoo();
         GenericConstructor fooConstructor = new GenericConstructor(fooClass.getConstructors()[0], fooClass);
-        ConstructorStatement fooConstructorStatement = new ConstructorStatement(test, fooConstructor, Arrays.asList(new VariableReference[]{}));
+        ConstructorStatement fooConstructorStatement = new ConstructorStatement(test, fooConstructor, List.of());
         VariableReference fooVar = test.addStatement(fooConstructorStatement);
 
         // String fileName = new String("/home/galeotti/README.txt")
@@ -86,23 +89,23 @@ public class EnvironmentDataSystemTest extends SystemTestBase {
         FileNamePrimitiveStatement fileNameStmt = new FileNamePrimitiveStatement(test, evosuiteFile);
         test.addStatement(fileNameStmt);
 
-        Method fooIncMethod = fooClass.getMethod("inc", new Class<?>[]{});
+        Method fooIncMethod = fooClass.getMethod("inc");
         GenericMethod incMethod = new GenericMethod(fooIncMethod, fooClass);
-        test.addStatement(new MethodStatement(test, incMethod, fooVar, Arrays.asList(new VariableReference[]{})));
-        test.addStatement(new MethodStatement(test, incMethod, fooVar, Arrays.asList(new VariableReference[]{})));
-        test.addStatement(new MethodStatement(test, incMethod, fooVar, Arrays.asList(new VariableReference[]{})));
-        test.addStatement(new MethodStatement(test, incMethod, fooVar, Arrays.asList(new VariableReference[]{})));
-        test.addStatement(new MethodStatement(test, incMethod, fooVar, Arrays.asList(new VariableReference[]{})));
+        test.addStatement(new MethodStatement(test, incMethod, fooVar, List.of()));
+        test.addStatement(new MethodStatement(test, incMethod, fooVar, List.of()));
+        test.addStatement(new MethodStatement(test, incMethod, fooVar, List.of()));
+        test.addStatement(new MethodStatement(test, incMethod, fooVar, List.of()));
+        test.addStatement(new MethodStatement(test, incMethod, fooVar, List.of()));
 
         // DseBar dseBar0 = new DseBar(string0);
         GenericConstructor gc = new GenericConstructor(clazz.getRawClass().getConstructors()[0], clazz);
-        ConstructorStatement constructorStatement = new ConstructorStatement(test, gc, Arrays.asList(new VariableReference[]{stringVar}));
+        ConstructorStatement constructorStatement = new ConstructorStatement(test, gc, Arrays.asList(stringVar));
         VariableReference callee = test.addStatement(constructorStatement);
 
         // dseBar0.coverMe(dseFoo0);
-        Method m = clazz.getRawClass().getMethod("coverMe", new Class<?>[]{fooClass});
+        Method m = clazz.getRawClass().getMethod("coverMe", fooClass);
         GenericMethod method = new GenericMethod(m, sut);
-        MethodStatement ms = new MethodStatement(test, method, callee, Arrays.asList(new VariableReference[]{fooVar}));
+        MethodStatement ms = new MethodStatement(test, method, callee, Arrays.asList(fooVar));
         test.addStatement(ms);
         System.out.println(test);
 
